<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:windowSoftInputMode="adjustPan|adjustResize"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.lists.IngredientListFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/addMealTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/addMealTitle"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <EditText
            android:id="@+id/addMealName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:hint="@string/mealName" />

        <LinearLayout
            android:id="@+id/appendIngrLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ingrName"
                android:layout_width="176dp"
                android:layout_height="match_parent"
                android:hint="@string/ingredientName"
                android:inputType="text"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/ingrKcal"
                android:layout_width="111dp"
                android:layout_height="46dp"
                android:fontFamily="sans-serif"
                android:hint="@string/ingredientKcal"
                android:inputType="number"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/saveIngrBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/ingrDialogAdd"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ingrRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/appendIngrLine"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:nestedScrollingEnabled="true"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <Button
            android:id="@+id/saveMeal"
            android:layout_width="wrap_content"
            android:layout_height="59dp"
            android:layout_marginBottom="48dp"
            android:text="@string/saveMealBtn" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/totalKcalLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Total kcal: " />

            <TextView
                android:id="@+id/totalMealKcal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>